--- a/client/src/Resources/css/styles2.css
+++ b/client/src/Resources/css/styles2.css
@@ -314,6 +314,30 @@ select {
   width: 100%;
   text-decoration: none;
 }
+.dropzone {
+  border: 1px solid #e5e5e5;
+  margin-bottom: 40px;
+}
+
+.dropzone_box {
+  float: left;
+  width: 25%;
+  height: 160px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.dropzone_box .wrap {
+  background: #eaeaea;
+  height: 100%;
+  text-align: center;
+  padding-top: 31px;
+  box-sizing: border-box;
+  font-size: 49px;
+  background-size: contain !important;
+  background-position: center center !important;
+  border: 1px solid #eaeaea;
+}
 @media (min-width: 601px) And (max-width: 900px) {
   .container {
     width: 90%;
